add 2 methods - GET task by ID and GET filtered task
